# ShortReelsAgent

./: .env.example  .gitignore  AudioEnvModelManager.py  BlipModelManager.py  LightweightVideoModelManager.py  MIGRATE.sh  MainstreamVideoModelManager.py  QAlignModelManager.py  QwenModelManager.py  REFACTOR_TASK.md  SaliencyModelManager.py  VadModelManager.py  WhisperModelManager.py  main.py  phrase1.py  phrase2.py  phrase3.py  phrase4.py  pyproject.toml  requirements.txt  requirments.txt  test.py
DirectorAgent/: ContextCompressor.py  DirectorFacade.py
MediaProcessor/: AbstractVideoProcessor.py  ComplexVideoProcessor.py  DenseSequenceVideoProcessor.py  ImageProcessor.py  LongVideoProcessor.py  MediaProcessorFactory.py  MediaStrategy.py  ShortVideoProcessor.py  StandardVideoProcessor.py  VideoProcessor.py
MediaTools/: FFmpegAdapter.py  MediaDownloader.py  MediaStandardizer.py
Model/: AudioEnvModelManager.py  GeminiModelManager.py  LaionModelManager.py  LlavaOneVisionModelManager.py  ManiqaModelManager.py  MusiqModelManager.py  QwenModelManager.py  SaliencyModelManager.py  VadModelManager.py  WhisperModelManager.py
MusicEngine/: JamendoAdapter.py  LyricsAdapter.py  MusicEngineFacade.py
PromptManager/: BasePromptManager.py  DefaultPromptManager.py  PromptFactory.py  TaskMode.py
TemplateEngine/: AudioBeatExtractor.py  BlueprintBuilder.py  MediaDemuxer.py  SceneCutExtractor.py  StyleReverseEngineer.py  TemplateAnalyzerFacade.py
backend/: main.py
config/: app_config.py  color_presets.py  constants.py  director_config.py  env_utils.py  ingestion_config.py  media_formats.py  media_processor_config.py  model_config.py  pipeline_config.py  preference_few_shot_examples.json  pricing_config.py  project_artifacts.py
director_agent/: context_compressor.py  director_facade.py  music_director.py
docs/: auth_notes.md  blueprint_prep_design.md  cost_timing_model_design.md  editing_capability_roadmap.md  editor_redesign.md  implementation_roadmap.md  inference_resolution_optimization.md  integrated_acceleration_plan.md  lock_design.md  metadata_enrichment_plan.md  metadata_reference.md  parallel_inference_architecture.md  pitch_architecture_slides.md  preference_data_flywheel.md  previous_plan.md  text_overlay_track_handoff.md
eval/: .env.example  .gitignore  README.md  __init__.py  __main__.py  cli.py  config_loader.py  constants.py  dataset_spec.example.yaml  docs.md  http_client.py  jsonio.py  logging_setup.py  models.py  pipeline.py  seeding.py
frontend/: .env.example  package-lock.json  package.json  vite.config.js
ingestion_engine/: __init__.py  cloud_ingestion_service.py  cloud_storage_adapter.py  exceptions.py  models.py  poller.py  public_drive_api_adapter.py
media_processor/: abstract_image_processor.py  abstract_video_processor.py  complex_image_processor.py  complex_video_processor.py  image_processor.py  image_strategy.py  media_processor_factory.py  media_strategy.py  models.py  video_processor.py  video_strategy.py
media_tools/: audio_beat_extractor.py  ffmpeg_adapter.py  media_downloader.py  media_standardizer.py  video_encode_strategy.py
model/: __init__.py  audio_env_model_manager.py  base_model_manager.py  gemini_model_manager.py  gpu_capacity_manager.py  gpu_gate.py  laion_model_manager.py  mediapipe_model_manager.py  model_pool.py  musiq_model_manager.py  qwen_model_manager.py  (+4 more)
(+317 files in other folders)
