[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "mjlee",email = "yenchieh0826@gmail.com"}
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "torch (==2.11.0+cu126)",
    "torchvision (==0.26.0+cu126)",
    "torchaudio (==2.11.0+cu126)",
    "fastapi (==0.136.0)",
    "uvicorn (==0.45.0)",
    "transformers (==5.5.4)",
    "opencv-python (==4.13.0.92)",
    "yt-dlp (==2026.3.17)",
    "pandas (==3.0.2)",
    "scikit-learn (==1.8.0)",
    "rembg[gpu] (>=2.0.75,<3.0.0)",
    "pydantic (==2.13.2)",
    "pillow (==12.1.1)",
    "librosa (==0.11.0)",
    "accelerate (==1.13.0)",
    "qwen-vl-utils (==0.0.14)",
    "pillow-heif (==1.3.0)",
    "pyiqa (==0.1.15.post2)",
    "google-genai (==1.73.1)",
    "scenedetect (==0.6.7.1)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "torchcodec (>=0.11.1,<0.12.0)",
    "ytmusicapi (>=1.12.0,<2.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}

[dependency-groups]
dev = [
    "pytest (==9.0.3)",
    "ruff (==0.15.11)",
    "pre-commit (==4.5.1)"
]
